# user_verwaltung_actix_sqlite

./: .gitignore  database.sqlite  readme.md  user.sql
betterv/: Cargo.toml
betterv/src/: main.rs
database/: Cargo.toml
database/src/: main.rs
frontend/src/: App.js
frontend/src/components/: LoggedInUsers.js  Login.js  Register.js  Users.js
frontend/src/context/: AuthContext.js
userapp/: Cargo.toml
userapp/src/: main.rs
